# ms_api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  manage.py  pyproject.toml
api/: filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_meteobluedata_alter_measurement_timestamp.py  0003_rename_meteobluedata_forecastdata.py  0004_alter_forecastdata_pictocode_and_more.py  0005_forecastdata_temperature_mean.py  0006_forecastdata_relativehumidity_mean_and_more.py  0007_forecastdata_felttemperature_mean.py  0008_station_measurement_station.py  0009_station_city_name.py  0010_forecastdata_city_name.py  0011_measurementstat.py  0012_remove_measurementstat_rain_and_more.py  0013_alter_measurementstat_date.py  0014_alter_measurement_timestamp.py  0015_alter_measurement_timestamp.py  0016_remove_measurement_pressure_remove_measurement_rain_and_more.py  0017_remove_measurementstat_pressure.py
meteostanica/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: .env.dev  pyproject.toml  test.py
