[tool.poetry]
name = "ms-api"
version = "0.1.0"
description = ""
authors = ["Michal Urban"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.5.0"
djoser = "^2.2.3"
drf-spectacular = "^0.27.2"
django-filter = "^24.3"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
